# react-native-secure-sign

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SecureSign.podspec  package.json  tsconfig.json
android/: build.gradle  gradle.properties
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/SecureSignExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/SecureSignExample.xcodeproj/: project.pbxproj
example/ios/SecureSignExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: SecureSign.h  SecureSign.mm  SecureSignCheckHardwareSupport.swift  SecureSignError.swift  SecureSignGenerate.swift  SecureSignGetPublicKey.swift  SecureSignHelpers.swift  SecureSignImpl.swift  SecureSignIsSupported.swift  SecureSignRemoveKey.swift  SecureSignSign.swift
ios/secure_sign_rust/: libsecure_sign_rust.h
ios/secure_sign_rust.xcframework/: Info.plist
ios/secure_sign_rust.xcframework/ios-arm64/Headers/: module.modulemap  (+1 more)
modules/react-native-secure-a/: SecureA.podspec  package.json
modules/react-native-secure-a/android/: build.gradle  gradle.properties
modules/react-native-secure-a/example/: app.json  package.json
modules/react-native-secure-a/ios/: SecureA.h  SecureA.mm
modules/react-native-secure-a/src/: NativeSecureA.ts  index.tsx
rust/secure_sign_rust/: Cargo.toml  Makefile  README.md  build.rs
rust/secure_sign_rust/src/: challenge.rs  cryptographic.rs  ffi.rs  jni_android.rs  lib.rs
src/: NativeSecureSign.ts  index.tsx
(+29 files in other folders)
