[package]
name = "secure_sign_rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2.80"
jni = "0.17.0"
p256 = "0.13"
pkcs8 = "0.10"
base64 = "0.21"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.28.0"
